# veronica

./: Cargo.toml
src/: lib.rs
src/config/: config.rs
src/core/: backtesting.rs  decision.rs  mod.rs  utils.rs
src/crawler/: crawler.rs  finmind.rs  mod.rs
src/dataview/: mod.rs  view.rs
src/diagram/: diagram.rs  mod.rs
src/export/: export.rs  mod.rs
src/storage/: backend.rs
src/strategy/: bollinger_band.rs  mod.rs  schema.rs  strategy.rs
