[package]
name = "veronica"
version = "0.1.0"
description = "Finance"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["json","blocking"] }
serde = { version = "1.0.117", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
url = "2.2.0"
sled = "0.34.7"
bincode = "1.3.1"
csv = "1.1"
serde_yaml = "0.8.23"
ta = "0.5.0"
plotly = "0.7.0"
mockall = "0.11.0"
getopts = "0.2"